start with git pages

--- a/src/html/pages/about/index.html
+++ b/src/html/pages/about/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <h1 style="color: yellow;">Hello о нас!</h1>
-<a href="/index/">Главная</a>
+<a href="/vite/index/">Главная</a>
 </body>
 </html>
