--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,11 @@
     <div id="app"></div>
     <ol>
       <li>
-        <a href="/html/pages/about/">О нас</a>
+        <a href="/vite/html/pages/about/">О нас</a>
       </li>
 
       <li>
-        <a href="/html/pages/contacts/">Контакты</a>
+        <a href="/vite/html/pages/contacts/">Контакты</a>
       </li>
     </ol>
     <script type="module" src="./assets/js/main.js"></script>
