--- a/src/html/pages/contacts/index.html
+++ b/src/html/pages/contacts/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<a href="/vite/index/">Главная</a>
+<a href="/vite/">Главная</a>
 <h1 style="color: blue;">Hello Vite222222!</h1>
 <p>Если это красное - стили работают</p>
 </body>
