Начало верстки. Добавлен компонент аккордеона

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,28 @@
 {{>header}}
 <div class="main">
+    <ul class="acc">
+        <li class="acc__item">
+            <h2 class="acc__trigger">123</h2>
+            <div class="acc__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aliquam
+                animi consequuntur cum, dicta, dolore ducimus fugit hic illum nostrum, possimus provident quaerat saepe
+                sunt tempora ut vero voluptate voluptates.
+            </div>
+        </li>
+        <li class="acc__item">
+            <h2 class="acc__trigger">123</h2>
+            <div class="acc__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam animi autem
+                blanditiis dicta dolorem eum explicabo id iusto laborum laudantium, minima nemo nobis porro rem sed sit
+                temporibus velit voluptatum!
+            </div>
+        </li>
+        <li class="acc__item">
+            <h2 class="acc__trigger">123</h2>
+            <div class="acc__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus animi est et
+                fugiat in incidunt laudantium nostrum, quam quis ratione. Earum eos ipsa odio. Libero, perspiciatis
+                veniam? Expedita, modi, quidem!
+            </div>
+        </li>
+    </ul>
 
 </div>
 {{>footer}}
