--- a/src/about.html
+++ b/src/about.html
@@ -1,5 +1,7 @@
 {{>header}}
-<h2>About</h2>
-{{>about/hero}}
-{{>main/hero}}
+
+<div class="main">
+    <h2>About</h2>
+    {{>about/hero}}
+</div>
 {{>footer}}
